2009-01-19  Cosimo Cecchi  <cosimoc@gnome.org>

	* INSTALL:
	* Makefile.am:
	* configure.ac: use intltool 0.4.0.

2008-11-17  Cosimo Cecchi  <cosimoc@gnome.org>

	* configure.ac: better message for python libraries check.
	Part of bug #552186.

2008-09-22  Vincent Untz  <vuntz@gnome.org>

	* configure.ac: post-release bump to 0.11.7

==================== 0.11.6 ====================

2008-09-22  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README: version 0.11.6

2008-09-22  Vincent Untz  <vuntz@gnome.org>

	* configure.ac: check for python 2.6. Fix bug #551751.

2008-09-11  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am:
	* alacarte.desktop.in.in:
	* alacarte.glade:
	* configure.ac:
	* data/Makefile.am:
	* data/icons/Makefile.am:
	* po/POTFILES.in:
	* po/POTFILES.skip:
	Create a data directory, and put data in there.
	Add all sizes for icons.
	Fix bug #549994
	Based on work by Michael Monreal <michael.monreal@gmx.net>

2008-09-11  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: fix uninstallation of icons
	Fix bug #538679
	Patch by Fabricio Silva <silva@crans.org>

2008-03-10  Travis Watkins  <amaranth@ubuntu.com>

	* configure.ac: post-release bump to 0.11.6

==================== 0.11.5 ====================

2008-03-10  Travis Watkins  <amaranth@ubuntu.com>

	* NEWS:
	  README: version 0.11.5

2008-02-18  Travis Watkins  <amaranth@ubuntu.com>

	* Alacarte/MainWindow.py: bail out if no item selected (bug 517380)

2008-02-16  Travis Watkins  <amaranth@ubuntu.com>

        * configure.ac: pre-release bump to 0.11.5

==================== 0.11.4 ====================

2008-02-16  Travis Watkins  <amaranth@ubuntu.com>

	* NEWS:
	* README: version 0.11.4

2008-02-16  Travis Watkins  <amaranth@ubuntu.com>

	* Alacarte/MenuEditor.py: hopefully fix the most frequest crasher

2008-02-16  Travis Watkins  <amaranth@ubuntu.com>

	* Alacarte/MainWindow.py: _really_ fix that drag-and-drop problem
	* po/POTFILES.in: make distcheck work
