@@ -6,6 +6,7 @@ AC_CONFIG_SRCDIR(alacarte.in)
 AM_INIT_AUTOMAKE([1.7])
 AM_MAINTAINER_MODE
 
+m4_define(required_pygobject_version, 2.15.1)
 m4_define(required_pygtk_version, 2.8.0)
 
 dnl put the ACLOCAL flags in the makefile
@@ -22,6 +23,20 @@ AM_PATH_PYTHON_VERSION(2.6, 2.6.0, 2.5, 2.5.0, 2.4, 2.4.0)
 
 PKG_CHECK_MODULES(ALACARTE, libgnome-menu >= 2.15)
 
+dnl Check for correctly installed pygobject
+AC_MSG_CHECKING(for pygobject required_pygobject_version installed for python required_python_abi)
+prog="
+import gobject
+assert gobject.pygobject_version >= tuple(map(int, 'required_pygobject_version'.split('.')))
+"
+
+if $PYTHON -c "$prog" 1>&AC_FD_CC 2>&AC_FD_CC; then
+    AC_MSG_RESULT(found)
+else
+    AC_MSG_RESULT(not found)
+    AC_MSG_ERROR(required pygobject version not found)
+fi
+
 dnl Check for correctly installed pygtk
 AC_MSG_CHECKING(for pygtk required_pygtk_version installed for python ${PYTHON_VERSION})
 prog="
@@ -29,6 +44,7 @@ import pygtk; pygtk.require('2.0')
 import gobject
 assert gobject.pygtk_version >= tuple(map(int, 'required_pygtk_version'.split('.')))
 "
+
 if $PYTHON -c "$prog" 1>&AC_FD_CC 2>&AC_FD_CC; then
     AC_MSG_RESULT(found)
 else
